--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "pgats-2025-02-base",
   "version": "1.0.0",
-  "description": "",
+  "description": "Trabalho de conclusão da disciplina de Automação de Testes em APIs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha \"test/**/*.test.js\" --timeout 10000 --reporter mochawesome --reporter-options quiet=true",
+    "test-graphql": "echo \"Erro: no teste teste-graphql\" && exit 1",
+    "test-graphql-controller": "echo \"Erro: no teste graphql-controller\" && exit 1",
+    "test-graphql-external": "echo \"Erro: no teste graphql-external\" && exit 1",
+    "test-rest": "npm run test-rest-controller && npm run test-rest-external",
+    "test-rest-controller": "mocha \"test/rest/controller/**/*.test.js\" --timeout 10000 --reporter mochawesome --reporter-options quiet=true",
+    "test-rest-external": "mocha \"test/rest/external/**/*.test.js\" --timeout 10000 --reporter mochawesome --reporter-options quiet=true",
+    "start-graphql": "node graphql/server.js",
+    "start-rest": "node rest/server.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +32,14 @@
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "chai": "^6.0.1",
+    "chai-exclude": "^3.0.1",
+    "dotenv": "^17.2.2",
+    "mocha": "^11.7.2",
+    "mochawesome": "^7.1.3",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4"
   }
 }
