Conf. os arquivos para: rodar pipeline, testes do external e outros ajustes gerais

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,3 +21,9 @@ jobs:
 
     - name: ⚙️ Instalar dependências
       run: npm install
+
+    - name: 🧪 Executar testes de API Rest via controller
+      run: npm run test-rest-controller
+
+    - name: ▶️ Subir a API Rest
+      run: npm run start-rest &
