Ajuste no node.yml para rodas os testes external e criação das variaveis do actions

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -27,3 +27,11 @@ jobs:
 
     - name: ▶️ Subir a API Rest
       run: npm run start-rest &
+
+    - name: ⏳ Esperar as APIs estarem funcionando
+      run: sleep 8  # segundos
+
+    - name: Criar no Github Actions o arquivo .env
+      run: |
+        echo "BASE_URL_REST = ${{ secrets.BASE_URL_REST }}" >> .env
+        echo "BASE_URL_GRAPHQL = ${{ secrets.BASE_URL_GRAPHQL }}" >> .env
